examples/codegen/tuples.an
foo (a, (b: t), _) {Print t} =
    _: string = a
    print b

main () =
    foo ("test", 2, 'c')
    foo ("hi", 7, 2.0, 3, 4, 5)

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/tuples.an:7:5
// 6 |     foo ("test", 2, 'c')
//   |     // error: Multiple matching implicits found for type Print _ required by parameter 2: print_bool, print_char, print_i8, print_i16, print_i32, ..
// 7 |     foo ("hi", 7, 2.0, 3, 4, 5)
//   |     ^^^
// 
// examples/codegen/tuples.an:7:10
// 6 |     foo ("test", 2, 'c')
// 7 |     foo ("hi", 7, 2.0, 3, 4, 5)	// error: Expected _, _ but found String
//   |          ^^^^
// 
// Found 2 errors and 0 warnings

